--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,6 @@
-backports.entry-points-selectable==1.1.0
-cachetools==4.2.2
-certifi==2021.5.30
-charset-normalizer==2.0.4
-click==8.0.1
-distlib==0.3.2
-filelock==3.0.12
-google-api-core==2.0.1
-google-api-python-client==2.19.0
-google-auth==2.0.2
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.53.0
-httplib2==0.19.1
-idna==3.2
-joblib==1.0.1
-nltk==3.6.2
-numpy==1.19.0
-pandas==1.3.3
-platformdirs==2.2.0
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.2
-pytz==2021.1
-regex==2021.8.28
-requests==2.26.0
-rsa==4.7.2
-six==1.16.0
-tqdm==4.62.2
-uritemplate==3.0.1
-urllib3==1.26.6
-youtube-transcript-api==0.4.1
+numpy
+pandas
+youtube_transcript_api
+nltk
+google-api-python-client
 Wikipedia-API
